Bug 1754027: disable SSRC changes for bundled audio RTP r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D138244